# uipe

./: .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .mcp.json.example  Cargo.toml  DEVELOPMENT.md  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.node.json  vitest.config.ts
bench/: optical-flow-eval.ts
crates/uipe-vision/: Cargo.toml
crates/uipe-vision/src/: classifier.rs  clustering.rs  image_io.rs  inference.rs  main.rs  primitives.rs  protocol.rs
crates/uipe-vision/tests/: integration_smoke.rs
landing/: .gitignore  BACKLOG.md  CHECKPOINT.md  HOOKS.md  KLING-PROMPTS.md  MORNING-REPORT-v2.md  MORNING-REPORT.md  PLAN.md  POSITIONING.md  next.config.ts  package.json  pnpm-lock.yaml
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: AsciiSpike.tsx  BraidScene.tsx  DevSnippet.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx  Problem.tsx  SceneGraph.tsx  SceneGraphFusion.tsx  Solution.tsx  WaitlistForm.tsx
landing/scripts/: capture-section.mjs  capture.mjs
scripts/: download-flow-model.ts  start.sh
sidecar/omniparser/: README.md  main.py  requirements.txt
src/: config.ts  index.ts
src/browser/: actions.ts  runtime.ts
src/mcp/: index.ts  serializer.ts  server.ts
src/types/: affordance.ts  browser-actions.ts  browser-diagnostics.ts  common.ts  index.ts  scene-graph.ts  structural.ts  temporal.ts  visual.ts
src/utils/: geometry.ts  logger.ts
tests/e2e/: github-issues.test.ts
tests/integration/: affordance-engine.test.ts  animation-verifier.test.ts  fusion-engine.test.ts  (+5 more)
(+106 files in other folders)
