[package]
name = "uipe-vision"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "uipe-vision"
path = "src/main.rs"

[dependencies]
# ort rc.9 is the last release-candidate with x86_64-apple-darwin prebuilts
# in the download-binaries CDN. rc.10+ dropped Intel Mac. Pinned exactly
# because pre-release Cargo semver does not range-match.
ort = { version = "2.0.0-rc.9", default-features = false, features = ["ndarray", "download-binaries"] }
ndarray = "0.16"
anyhow = "1.0"
thiserror = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
linfa = "0.7"
linfa-clustering = { version = "0.7", features = ["serde"] }
# linfa uses ndarray 0.15; alias so clustering.rs can create arrays linfa can accept
ndarray15 = { package = "ndarray", version = "0.15" }
